chore(rename): rename project from template.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
 
     steps:
-      - name: Checkout PyTemplate Project
+      - name: Checkout BenchMatcha Project
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
