--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: PyTemplate CI
+name: BenchMatcha CI
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
 
     steps:
-      - name: Checkout PyTemplate Project
+      - name: Checkout BenchMatcha Project
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -48,7 +48,7 @@ jobs:
         python-version: [ "3.11", "3.12" ]
 
     steps:
-      - name: Checkout PyTemplate Project
+      - name: Checkout BenchMatcha Project
         uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
